--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,6 @@ img {
 }
 
 /*header*/
-
 .page-header{
     background-color: lightblue;
     width: auto;
@@ -17,6 +16,7 @@ img {
     height: 250px;
 }
 
+/*main*/
 .titolo{
     margin-bottom:  0%;
 }
@@ -32,11 +32,21 @@ img {
 }
 
 .tim1{
-    width: 450px;
+    width: 500px;
     height: 350px;
 }
-.tim2{ 
-    width: 450px;
-    height: 350px;
 
+.tim2{ 
+    width: 500px;
+    height: 350px;
+}
+.foto{
+    margin-bottom: 0px;
+}
+
+.paragrafo-foto1{
+    margin: 0%;
+}
+.paragrafo-foto2{
+    margin-top: 0px;
 }
