--- a/css/style.css
+++ b/css/style.css
@@ -72,3 +72,16 @@ img {
     color: rgb(134, 134, 134);
 }
 
+.foto-footer{
+    margin-bottom: 15px;
+}
+.descrizione-foto1{
+    color: rgb(32, 31, 31);
+    
+    
+    
+}
+.descrizione-foto2{
+    color: rgb(19, 18, 18);
+    
+}
