--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,10 @@
 /* reset */
-img {
-    max-width: 100%;
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
+
 
 /*header*/
 .page-header{
@@ -61,10 +64,6 @@ img {
     color: white ;
     background-color: rgb(86, 86, 226);
     text-align: left;
-}
-
-.corpo-tabella{
-    
 }
 
 /*footer*/
