--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body{
 
 h2,h3{
     margin: 0px;
+    color: lightgray;
 }
 
 a{
@@ -46,7 +47,6 @@ img{
 }
 
 .intestazione{
-    color: lightgray;
     font-weight: bold;
     font-size: smaller;
 }
@@ -80,24 +80,29 @@ img{
 }
 
 .riga-dispari{
-    background-color: rgb(56, 186, 247);
+    background-color: rgb(105, 196, 238);
 }
 
 /*footer*/
-.titolo-footer{
-    color: rgb(134, 134, 134);
+.foto-monitor{
+    background-image: url(../img/monitor.jpg);
+    width: 300px;
+    height: 220px;
+    color: white;
+    background-repeat: no-repeat;
+    font-size: 1.3rem;
+    font-weight: bold;
+    margin-top: 15px;
+    padding: 5px;
+}
+.foto-grafico{
+    background-image: url(../img/graph.jpg);
+    width: 300px;
+    height: 300px;
+    color: white;
+    background-repeat: no-repeat;
+    font-size: 1.3rem;
+    font-weight: bold;
+    padding: 5px;
 }
 
-.foto-footer{
-    margin-bottom: 15px;
-}
-.descrizione-foto1{
-    color: rgb(32, 31, 31);
-    
-    
-    
-}
-.descrizione-foto2{
-    color: rgb(19, 18, 18);
-    
-}
