--- a/css/style.css
+++ b/css/style.css
@@ -1,108 +1,108 @@
 /* reset */
-*{
-    box-sizing: border-box;
+* {
+	box-sizing: border-box;
 }
-body{
-    margin: 0;
+body {
+	margin: 0;
 }
 
 /*utils*/
-.container{
-    padding-left: 15px;
-    padding-right: 15px;
+.container {
+	padding-left: 15px;
+	padding-right: 15px;
 }
 
-h2,h3{
-    margin: 0px;
-    color: lightgray;
+h2,
+h3 {
+	margin: 0px;
+	color: lightgray;
 }
 
-a{
-    text-decoration: none;
-    color: rgb(82, 137, 201);
+a {
+	text-decoration: none;
+	color: rgb(82, 137, 201);
 }
 
-img{
-    max-width: 100%;
+img {
+	max-width: 100%;
 }
 /*header*/
-.page-header{
-   background-image: url(../img/pattern.png);
-   background-color: rgb(38, 116, 206);
-    height: 120px; 
-    background-size: 30%; 
-    padding-top: 15px; 
-    padding-bottom: 15px;  
+
+.page-header {
+	background-image: url(../img/pattern.png);
+	background-color: rgb(78, 160, 252);
+	height: 120px;
+	background-size: 30%;
+	padding-top: 15px;
+	padding-bottom: 15px;
 }
-.logo-pic{ 
-    height: 100px;
-    padding-top: 45px;
-    
+
+.logo-pic {
+	height: 100px;
+	padding-top: 45px;
 }
 
 /*main*/
-.titolo{
-    margin-bottom:  0%;
-    font-size: 2.5rem;
+.titolo {
+	margin-bottom: 0%;
+	font-size: 2.5rem;
 }
 
-.intestazione{
-    font-weight: bold;
-    font-size: smaller;
+.intestazione {
+	font-weight: bold;
+	font-size: smaller;
 }
 
-.foto{
-    margin-left: 0;
-    margin-bottom: 0;
+.foto {
+	margin-left: 0;
+	margin-bottom: 0;
 }
 
-.fig-caption{
-    font-size: 0.7rem;
-
+.fig-caption {
+	font-size: 0.7rem;
 }
 
-.lista{
-    margin-left: -25px;    
+.lista {
+	margin-left: -25px;
 }
 
-.table{
-    border-collapse: collapse;
+.table {
+	border-collapse: collapse;
 }
 
-.head-table{
-    background-color: rgb(41, 117, 204);
-    color: white;
-    text-align: left;
+.head-table {
+	background-color: rgb(36, 171, 229);
+	color: white;
+	text-align: left;
 }
 
-.prima-riga-tabella{
-    width: 50%;
+.prima-riga-tabella {
+	width: 50%;
 }
 
-.riga-dispari{
-    background-color: rgb(105, 196, 238);
+.riga-dispari {
+	background-color: rgb(177, 229, 241);
 }
 
 /*footer*/
-.foto-monitor{
-    background-image: url(../img/monitor.jpg);
-    width: 300px;
-    height: 220px;
-    color: white;
-    background-repeat: no-repeat;
-    font-size: 1.3rem;
-    font-weight: bold;
-    margin-top: 15px;
-    padding: 5px;
+.foto-monitor {
+	background-image: url(../img/monitor.jpg);
+	width: 300px;
+	height: 220px;
+	color: white;
+	background-repeat: no-repeat;
+	font-size: 1.3rem;
+	font-weight: bold;
+	margin-top: 15px;
+	padding: 5px;
 }
-.foto-grafico{
-    background-image: url(../img/graph.jpg);
-    width: 300px;
-    height: 300px;
-    color: white;
-    background-repeat: no-repeat;
-    font-size: 1.3rem;
-    font-weight: bold;
-    padding: 5px;
+.foto-grafico {
+	background-image: url(../img/graph.jpg);
+	width: 300px;
+	height: 300px;
+	color: white;
+	background-repeat: no-repeat;
+	font-size: 1.3rem;
+	font-weight: bold;
+	padding: 5px;
 }
-
